spruced up index and added addIngToInventory() to dbMethods.py

--- a/templates/index.html
+++ b/templates/index.html
@@ -30,11 +30,29 @@
   </div>
   <div class="container">
     <div class="row">
-      <div class="col-sm text-center"><img src="/static/img/svg/cereals.svg"> </div>
-      <div class="col-sm text-center"></div>
-      <div class="col-sm text-center"></div>
-      <div class="col-sm text-center"><img src="/static/img/svg/groceries.svg"></div>
+      <div class="col-sm-3 text-center"><img src="/static/img/svg/cereals.svg"> </div>
+      <div class="col-sm-6 text-center">
+        <div class="card" id="content-box">
+          <div class="card-header"><h3>Why use PantryButler?</h3></div>
+          <ul class="list-group">
+            <li class="list-group-item">Save recipes and ingredients</li>
+            <li class="list-group-item">Create meal plans for the week</li>
+            <li class="list-group-item">Create a shopping list based on your meal plan</li>
+            <li class="list-group-item">Keep track of food in your kitchen with an inventory</li>
+          </ul>
+        </div>
+      </div>
+      <div class="col-sm-3 text-center"><img src="/static/img/svg/groceries.svg"></div>
     </div><!-- end row -->
+    <div class="row">
+        <div class="col-sm-3 text-center"><img src="/static/img/svg/cereals.svg"> </div>
+        <div class="col-sm-6 text-center">
+          <div class="card">
+
+          </div>
+        </div>
+        <div class="col-sm-3 text-center"><img src="/static/img/svg/groceries.svg"></div>
+    </div>
   </div><!-- end container -->
 </body>
 
