--- a/static/css/pb.css
+++ b/static/css/pb.css
@@ -6,6 +6,10 @@
     background-color: lightgoldenrodyellow;
 }
 
+#content-box {
+    background-color: lightgoldenrodyellow;
+}
+
 a.navbar-brand {
     font-family: 'Patua One', cursive;
 }
