--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,20 +1,19 @@
+<nav class="navbar navbar-expand-sm navbar-dark navbar-fixed-top" id="nav">
+  <div class="container">
 
-<div class="container">
-<nav class="navbar navbar-expand-sm navbar-dark " id="nav">
+    <a href="/" class="navbar-brand">
+      <img src="/static/img/svg/pepper-1.svg" height="75px" class="navbar-brand d-inline-block align-middle">
+      PantryButler
+    </a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportContent"
+      aria-expanded="false" aria-label="Toggle Navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
 
-  <a href="/" class="navbar-brand">
-    <img src="/static/img/svg/pepper-1.svg" height="75px" class="navbar-brand d-inline-block align-middle">
-    PantryButler
-  </a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse"
-    aria-controls="navbarSupportContent" aria-expanded="false" aria-label="Toggle Navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-
-  <div class="collapse navbar-collapse w-100">
-    <!-- Links -->
-    <ul class="navbar-nav w-100 justify-content-center">
-      <!--
+    <div class="collapse navbar-collapse w-100">
+      <!-- Links -->
+      <ul class="navbar-nav w-100 justify-content-center">
+        <!--
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="/recipes-ingredients/" id="navbardrop" data-toggle="dropdown">Recipes & Ingredients</a>
                 <div class="dropdown-menu">
@@ -23,21 +22,22 @@
                   <a class="dropdown-item" href="/recipes-ingredients/">View All</a>
                 </div>
               </li>-->
-      <li class="nav-item">
-        <a class="nav-link" href="#">Recipes & Ingredients</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Shopping List</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Meal Plan</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Inventory</a>
-      </li>
-    </ul>
+        <li class="nav-item">
+          <button class="btn nav-link" id="rec-ing-link">Recipes & Ingredients</button>
+        </li>
+        <li class="nav-item">
+          <button class="btn nav-link" id="shoppinglist-link">Shopping List</button>
+        </li>
+        <li class="nav-item">
+          <button class="btn nav-link" id="mealplan-link">Meal Plan</button>
+        </li>
+        <li class="nav-item">
+          <button class="btn nav-link" id="inv-link">Inventory</button>
+        </li>
+      </ul>
 
+
+    </div>
 
   </div>
 </nav>
-</div>
