--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
+  <script src="/static/js/templates.js"></script>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
   <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville:700|Patua+One" rel="stylesheet">
   <link rel="stylesheet" href="/static/css/pb.css">
@@ -13,47 +14,10 @@
 
 <body>
   {% include 'navbar.html' %}
-  <div class="jumbotron" id="title">
-    <div class="row justify-content-center">
-      <div class="col-xs-2 text-center">
-        <img src="/static/img/svg/pan.svg" height="200px">
-      </div>
-      <div class="col-xs-8 text-center">
-        <h1>{{ title }}</h1>
-        <h5>A general purpose kitchen app.</h5>
-      </div>
-      <div class="col-xs-2 text-center">
-        <img src="/static/img/svg/rice.svg" height="200px">
-      </div>
-    </div>
-
+  <div class="container text-center" id="content-box">
+    {% include 'title-page.html' %}
   </div>
-  <div class="container">
-    <div class="row">
-      <div class="col-sm-3 text-center"><img src="/static/img/svg/cereals.svg"> </div>
-      <div class="col-sm-6 text-center">
-        <div class="card" id="content-box">
-          <div class="card-header"><h3>Why use PantryButler?</h3></div>
-          <ul class="list-group">
-            <li class="list-group-item">Save recipes and ingredients</li>
-            <li class="list-group-item">Create meal plans for the week</li>
-            <li class="list-group-item">Create a shopping list based on your meal plan</li>
-            <li class="list-group-item">Keep track of food in your kitchen with an inventory</li>
-          </ul>
-        </div>
-      </div>
-      <div class="col-sm-3 text-center"><img src="/static/img/svg/groceries.svg"></div>
-    </div><!-- end row -->
-    <div class="row">
-        <div class="col-sm-3 text-center"><img src="/static/img/svg/cereals.svg"> </div>
-        <div class="col-sm-6 text-center">
-          <div class="card">
-
-          </div>
-        </div>
-        <div class="col-sm-3 text-center"><img src="/static/img/svg/groceries.svg"></div>
-    </div>
-  </div><!-- end container -->
+  {% include 'footer.html' %}
 </body>
 
 </html>
