next: trying to work on passing form data via Ajax

--- a/static/css/pb.css
+++ b/static/css/pb.css
@@ -39,6 +39,10 @@ h1 {
     font-size: 400%;
 }
 
+h3 {
+    font-family: 'Patua One', cursive;
+}
+
 h5 {
     font-family: 'Libre Baskerville', serif;
     font-size: medium;
